<resources>
    <string name="app_name">Email</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="gmail_username">Gmail Username</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="login">Login</string>
    <string name="send_mail">Send Mail</string>
    <string name="name">Name</string>
    <string name="email_id">Email Id</string>
    <string name="add_more">Add More</string>
    <string name="submit">Submit</string>
    <string name="add_email">Add Email</string>
    <string name="email_cannot_empty">Email cannot be empty</string>
    <string name="need_recipient">Need a valid email address</string>
    <string name="view_list">View the list</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="underline_text">Underline Text</string>
    <string name="italic_text">Italic Text</string>
    <string name="bold_text">Bold Text</string>
    <string name="format_text">Format Text</string>
    <string name="add_to_list">Add to list</string>
    <string name="add_through_csv">Add through CSV</string>
    <string name="select_the_column">Select the column containing email addresses</string>
    <string name="drive_url">Drive URL</string>
    <string name="enter_drive_link">Enter drive link to your CSV file</string>
    <string name="download">Download</string>
</resources>
