<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_drive_download_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/list_item_spacing"
        android:paddingTop="@dimen/list_item_spacing_half"
        android:paddingRight="@dimen/list_item_spacing"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:text="@string/enter_drive_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/divider_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/almostWhite"
        android:layout_marginTop="@dimen/list_item_spacing_half"
        android:layout_marginStart="@dimen/list_item_spacing"
        android:layout_marginEnd="@dimen/list_item_spacing"
        android:layout_marginBottom="@dimen/list_item_spacing"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_drive_download_link"
        app:layout_constraintBottom_toTopOf="@+id/tv_download"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_download"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_view">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/drive_url"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/download"
        app:layout_constraintTop_toBottomOf="@+id/tv_download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>