<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/cardview_light_background"
        android:outlineProvider="bounds"
        android:elevation="@dimen/cardview_default_elevation"
        android:layout_margin="8dp"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/to"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_subject"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/cardview_light_background"
        android:outlineProvider="bounds"
        android:elevation="@dimen/cardview_default_elevation"
        android:layout_margin="8dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailSubject"
            android:hint="@string/subject"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_msg"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:background="@color/cardview_light_background"
        android:outlineProvider="bounds"
        android:elevation="@dimen/cardview_default_elevation"
        android:layout_margin="8dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_subject"
        app:layout_constraintBottom_toTopOf="@+id/btn_send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_msg"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/message"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="Send"
        android:layout_margin="32dp"
        android:textColor="@color/almostWhite"
        android:background="@color/almostBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>